[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/design.png" type="Texture" id=1]
[ext_resource path="res://items/shop.gd" type="Script" id=2]
[ext_resource path="res://ui/buttons/item_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 35, 175, 86 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
modulate_color = Color( 1, 1, 1, 0.941176 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 4 )

[node name="shop" type="ItemList"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -208.0
margin_top = 16.0
margin_bottom = 378.0
custom_styles/bg = SubResource( 1 )
items = {
"axe": {
"attributes": {
"damage": 25
},
"delivery_time": 20,
"name": "Axe",
"price": 250,
"sprite": 0,
"tooltip": "Used to chop wood, now used for war
Damage +25",
"type": "equip"
},
"boots": {
"attributes": {
"speed": 15
},
"delivery_time": 15,
"name": "Boots",
"price": 300,
"sprite": 5,
"tooltip": "Protect your feet from the ground
Speed +15",
"type": "equip"
},
"bow": {
"attributes": {
"attack_range": 0.4,
"attack_speed": 0.25,
"damage": 20
},
"delivery_time": 30,
"name": "Elven
Bow",
"price": 500,
"sprite": 2,
"tooltip": "
Damage +20, Attack speed +25% Range +40%",
"type": "equip"
},
"eye": {
"attributes": {
"speed": 10,
"vision": 100
},
"delivery_time": 30,
"name": "Oligan's
Eye",
"price": 350,
"sprite": 11,
"tooltip": "The Eye has helped heroes navigate the battlefield for centuries
Vision +100 Speed +10",
"type": "equip"
},
"feather": {
"attributes": {
"regen": 2,
"speed": 5
},
"delivery_time": 15,
"name": "Magic
Feather",
"passive": "res://items/passives/feather.tscn",
"price": 350,
"sprite": 10,
"tooltip": "A feather imbued with magical force
Regen +2 Speed +15",
"type": "equip"
},
"great_helm": {
"attributes": {
"defense": 5,
"hp": 200
},
"delivery_time": 20,
"name": "Great
Helm",
"price": 500,
"sprite": 4,
"tooltip": "Adds 150 HP Defense +5",
"type": "equip"
},
"helmet": {
"attributes": {
"hp": 150
},
"delivery_time": 20,
"name": "Helmet",
"price": 300,
"sprite": 3,
"tooltip": "Adds 150 HP",
"type": "equip"
},
"holy_shield": {
"attributes": {
"hp": 150,
"vision": 50
},
"delivery_time": 30,
"name": "Holy
Shield",
"passive": "res://items/passives/holy_shield.tscn",
"price": 450,
"sprite": 7,
"tooltip": "Magically reinforced, stronger than steel
Health +200 Vision +50",
"type": "equip"
},
"large_hp": {
"attributes": {
"current_hp": 250
},
"delivery_time": 20,
"name": "Large
Health",
"price": 125,
"sprite": 14,
"tooltip": "Restore 250 HP",
"type": "consumable"
},
"large_poison_bomb": {
"attributes": {
"dot": 25,
"speed": -30
},
"delivery_time": 50,
"duration": 5,
"name": "Large
Poison",
"price": 175,
"sprite": 17,
"tooltip": "Slows down and deals 25 damage per second for 5 seconds",
"type": "throwable"
},
"medium_hp": {
"attributes": {
"current_hp": 150
},
"delivery_time": 15,
"name": "Medium
Health",
"price": 75,
"sprite": 13,
"tooltip": "Restore 150 HP",
"type": "consumable"
},
"medium_poison_bomb": {
"attributes": {
"dot": 15,
"speed": -20
},
"delivery_time": 30,
"duration": 5,
"name": "Medium
Poison",
"price": 100,
"sprite": 16,
"tooltip": "Slows down and deals 15 damage per second for 5 seconds",
"type": "throwable"
},
"scale": {
"attributes": {
"defense": 4,
"hp": 300,
"speed": -10
},
"delivery_time": 30,
"name": "Dragon
scale",
"price": 500,
"sprite": 8,
"tooltip": "No dragons were harmed in the making of this armor
Health +300 Defense +4 Speed -10",
"type": "equip"
},
"shield": {
"attributes": {
"hp": 100
},
"delivery_time": 30,
"name": "Shield",
"price": 200,
"sprite": 6,
"tooltip": "Wooden shield
Health +50",
"type": "equip"
},
"small_hp": {
"attributes": {
"current_hp": 100
},
"delivery_time": 10,
"name": "Small
Health",
"price": 50,
"sprite": 12,
"tooltip": "Restore 100 HP",
"type": "consumable"
},
"small_poison_bomb": {
"attributes": {
"dot": 10,
"speed": -10
},
"delivery_time": 15,
"duration": 5,
"name": "Small
Poison",
"price": 75,
"sprite": 15,
"tooltip": "Slows down and deals 10 damage per second for 5 seconds",
"type": "throwable"
},
"sword": {
"attributes": {
"attack_speed": 0.5,
"damage": 50
},
"delivery_time": 30,
"name": "Sword",
"price": 500,
"sprite": 1,
"tooltip": "Forged of pure high-carbon steel
Damage +50 Attack speed +50%",
"type": "equip"
},
"torch": {
"attributes": {
"vision": 50
},
"delivery_time": 15,
"name": "Torch",
"price": 150,
"sprite": 9,
"tooltip": "This torch will never burn out
Vision +50",
"type": "equip"
}
}
script = ExtResource( 2 )

[node name="scroll_container" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 11.0
margin_right = -14.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 290, 0 )

[node name="container" type="VBoxContainer" parent="scroll_container"]
margin_right = 166.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="shop_title" type="Label" parent="scroll_container/container"]
margin_right = 166.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "shop"

[node name="separator" type="HSeparator" parent="scroll_container/container"]
margin_top = 22.0
margin_right = 166.0
margin_bottom = 26.0

[node name="equip" type="Label" parent="scroll_container/container"]
margin_top = 30.0
margin_right = 166.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "Equip"

[node name="equip_items" type="GridContainer" parent="scroll_container/container"]
margin_top = 50.0
margin_right = 166.0
margin_bottom = 254.0
columns = 3

[node name="item_button" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button2" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 52.0
margin_right = 100.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button2" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button2" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button3" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 104.0
margin_right = 152.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button3" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button3" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button4" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_top = 52.0
margin_bottom = 100.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button4" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button4" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button5" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 52.0
margin_top = 52.0
margin_right = 100.0
margin_bottom = 100.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button5" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button5" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button6" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 104.0
margin_top = 52.0
margin_right = 152.0
margin_bottom = 100.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button6" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button6" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button7" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_top = 104.0
margin_bottom = 152.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button7" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button7" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button8" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 52.0
margin_top = 104.0
margin_right = 100.0
margin_bottom = 152.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button8" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button8" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button9" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 104.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 152.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button9" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button9" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button10" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_top = 156.0
margin_bottom = 204.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button10" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button10" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button11" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 52.0
margin_top = 156.0
margin_right = 100.0
margin_bottom = 204.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button11" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button11" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button12" parent="scroll_container/container/equip_items" instance=ExtResource( 3 )]
margin_left = 104.0
margin_top = 156.0
margin_right = 152.0
margin_bottom = 204.0
focus_mode = 2

[node name="name" parent="scroll_container/container/equip_items/item_button12" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/equip_items/item_button12" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="separator2" type="HSeparator" parent="scroll_container/container"]
margin_top = 258.0
margin_right = 166.0
margin_bottom = 262.0

[node name="consumable" type="Label" parent="scroll_container/container"]
margin_top = 266.0
margin_right = 166.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 3 )
text = "Consumable"

[node name="consumable_items" type="GridContainer" parent="scroll_container/container"]
margin_top = 286.0
margin_right = 166.0
margin_bottom = 334.0
columns = 3

[node name="item_button" parent="scroll_container/container/consumable_items" instance=ExtResource( 3 )]
focus_mode = 2

[node name="sell_button" parent="scroll_container/container/consumable_items/item_button" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button4" parent="scroll_container/container/consumable_items" instance=ExtResource( 3 )]
margin_left = 52.0
margin_right = 100.0
focus_mode = 2

[node name="sell_button" parent="scroll_container/container/consumable_items/item_button4" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button2" parent="scroll_container/container/consumable_items" instance=ExtResource( 3 )]
margin_left = 104.0
margin_right = 152.0
focus_mode = 2

[node name="sell_button" parent="scroll_container/container/consumable_items/item_button2" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="separator3" type="HSeparator" parent="scroll_container/container"]
margin_top = 338.0
margin_right = 166.0
margin_bottom = 342.0

[node name="throwable" type="Label" parent="scroll_container/container"]
margin_top = 346.0
margin_right = 166.0
margin_bottom = 362.0
custom_fonts/font = SubResource( 3 )
text = "Throwable"

[node name="throwable_items" type="GridContainer" parent="scroll_container/container"]
margin_top = 366.0
margin_right = 166.0
margin_bottom = 414.0
columns = 3

[node name="item_button3" parent="scroll_container/container/throwable_items" instance=ExtResource( 3 )]
focus_mode = 2

[node name="name" parent="scroll_container/container/throwable_items/item_button3" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/throwable_items/item_button3" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button5" parent="scroll_container/container/throwable_items" instance=ExtResource( 3 )]
margin_left = 52.0
margin_right = 100.0
focus_mode = 2

[node name="name" parent="scroll_container/container/throwable_items/item_button5" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/throwable_items/item_button5" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button6" parent="scroll_container/container/throwable_items" instance=ExtResource( 3 )]
margin_left = 104.0
margin_right = 152.0
focus_mode = 2

[node name="name" parent="scroll_container/container/throwable_items/item_button6" index="0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_button" parent="scroll_container/container/throwable_items/item_button6" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="scroll_container/container/equip_items/item_button"]
[editable path="scroll_container/container/equip_items/item_button2"]
[editable path="scroll_container/container/equip_items/item_button3"]
[editable path="scroll_container/container/equip_items/item_button4"]
[editable path="scroll_container/container/equip_items/item_button5"]
[editable path="scroll_container/container/equip_items/item_button6"]
[editable path="scroll_container/container/equip_items/item_button7"]
[editable path="scroll_container/container/equip_items/item_button8"]
[editable path="scroll_container/container/equip_items/item_button9"]
[editable path="scroll_container/container/equip_items/item_button10"]
[editable path="scroll_container/container/equip_items/item_button11"]
[editable path="scroll_container/container/equip_items/item_button12"]
[editable path="scroll_container/container/consumable_items/item_button"]
[editable path="scroll_container/container/consumable_items/item_button4"]
[editable path="scroll_container/container/consumable_items/item_button2"]
[editable path="scroll_container/container/throwable_items/item_button3"]
[editable path="scroll_container/container/throwable_items/item_button5"]
[editable path="scroll_container/container/throwable_items/item_button6"]
